Bug 418977 - After rotation mouse cursor is visible on touch device
Summary: After rotation mouse cursor is visible on touch device
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-18 05:54 UTC by Bhushan Shah
Modified: 2025-02-16 22:36 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhushan Shah 2020-03-18 05:54:22 UTC
SUMMARY

On mobile devices cursor should not be visible at all, but it appears after rotating device once using orientation sensor.

STEPS TO REPRODUCE
1. Have a Mobile/Tablet device without any cursor
2. Rotate it

OBSERVED RESULT
Cursor is visible

EXPECTED RESULT
Cursor should not be visible since no mouse is attached.

KDE Plasma Version: git master
KDE Frameworks Version: git master
Qt Version: 5.14.1
Comment 1 Bhushan Shah 2020-05-21 08:55:36 UTC
Git commit b2df11bf7e59d57240afcdf88b352d49799d9922 by Bhushan Shah.
Committed on 21/05/2020 at 07:08.
Pushed by bshah into branch 'Plasma/5.19'.

[platforms/drm] show cursor only when it is enabled

In previous code we used to update/show cursor even when the pointer
device was present, e.g mobile device. Guard it behind the cursor
enabled check.
FIXED-IN: 5.19.0

M  +4    -0    plugins/platforms/drm/drm_backend.h
M  +11   -6    plugins/platforms/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/commit/b2df11bf7e59d57240afcdf88b352d49799d9922
Comment 2 Plata 2023-02-25 12:08:15 UTC
I have this behavior with 5.27.1.
Comment 3 Plata 2023-02-25 12:09:48 UTC
Note that the cursor disappears after touching the screen again.
Comment 4 Zamundaaa 2024-03-12 14:51:39 UTC
Can confirm, the cursor still wrongly shows after screen rotation
Comment 5 Bug Janitor Service 2025-02-16 21:46:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7165
Comment 6 Zamundaaa 2025-02-16 22:09:00 UTC
Git commit aaee1ba14c9df3a2de677f2844b0c0a8c6ba6546 by Xaver Hugl.
Committed on 16/02/2025 at 21:45.
Pushed by zamundaaa into branch 'master'.

hide cursor spy: don't show the cursor on warps

They're not user interaction, and can happen for example on output configuration changes

M  +3    -1    src/hide_cursor_spy.cpp

https://invent.kde.org/plasma/kwin/-/commit/aaee1ba14c9df3a2de677f2844b0c0a8c6ba6546
Comment 7 Zamundaaa 2025-02-16 22:36:01 UTC
Git commit 5b8227c89ec82af89a4b474c530f7fe4da69ebf3 by Xaver Hugl.
Committed on 16/02/2025 at 22:09.
Pushed by zamundaaa into branch 'Plasma/6.3'.

hide cursor spy: don't show the cursor on warps

They're not user interaction, and can happen for example on output configuration changes


(cherry picked from commit aaee1ba14c9df3a2de677f2844b0c0a8c6ba6546)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +3    -1    src/hide_cursor_spy.cpp

https://invent.kde.org/plasma/kwin/-/commit/5b8227c89ec82af89a4b474c530f7fe4da69ebf3